<resources>
    <string name="app_name">Assignment 07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genres">Genres</string>
    <string name="books">Books</string>
    <string name="back">Back</string>
    <string name="book_details">Book Details</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="genre">Genre:</string>
    <string name="year">Year:</string>
</resources>